# manoplayer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  ManoModelEditor.tsx  PlayerCanvas.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_server.rs  lib.rs  main.rs
test/bochi/: model.char.json
