[package]
name = "webgal_mano_player"
version = "0.1.0"
description = "Desktop player for webgal_mano character models"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "webgal_mano_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tiny_http = "0.12"
urlencoding = "2.1"
